--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "bulma": "^1.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
-    "react-router": "^7.1.5",
-    "rsuite": "^5.77.1"
+    "react-router": "^7.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
